updated gitignore and removed unwanted files

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 
-# Created by https://www.gitignore.io/api/xcode,c++,visualstudio
+# Created by https://www.gitignore.io/api/visualstudio,xcode,c++
 
 ### Xcode ###
 # Xcode
@@ -339,4 +339,4 @@ __pycache__/
 
 ### VisualStudio Patch ###
 
-# End of https://www.gitignore.io/api/xcode,c++,visualstudio
+# End of https://www.gitignore.io/api/visualstudio,xcode,c++
